--- a/src/Pages/MainApp.jsx/MainApp.css
+++ b/src/Pages/MainApp.jsx/MainApp.css
@@ -31,6 +31,13 @@
   overflow: hidden;
 }
 
+.chat-container {
+  flex: 1;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .chat-window {
   flex: 1;
   background-color: var(--chat-bg);
