added the Showcase page, and minor bug fixes and improvements

--- a/src/Pages/MainPage/ChatPage/ChatPage.css
+++ b/src/Pages/MainPage/ChatPage/ChatPage.css
@@ -80,12 +80,14 @@
   font-size: 0.75rem;
   color: #666;
   text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 4px;
 }
 
 .chat-message-status {
-  margin-left: 2px;
-  display: inline-flex;
-  vertical-align: middle;
+  margin-left: 15px;
 }
 
 .chat-date-separator {
