--- a/src/Pages/OnboardingRelated/Join/Join.css
+++ b/src/Pages/OnboardingRelated/Join/Join.css
@@ -17,7 +17,7 @@
 
 .join-header h1 {
   font-size: 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.2rem;
   color: #333;
 }
 
@@ -25,6 +25,12 @@
   margin-top: 0;
   font-size: 0.95rem;
   color: #555;
+}
+
+.join-header h2 {
+  font-size: 1.5rem;
+  margin-top: 0.2rem;
+  color: #333;
 }
 
 .join-form {
