--- a/src/Pages/MainPage/ContactsPage/ContactsPage.css
+++ b/src/Pages/MainPage/ContactsPage/ContactsPage.css
@@ -1,7 +1,8 @@
 .contact-list {
   min-width: 200px;
+  width: 100%;
   height: 100vh;
-  padding: 1rem;
+  /* padding: 1rem; */
   box-sizing: border-box;
 }
 
