--- a/src/Pages/MainPage/SidebarPage/SidebarPage.css
+++ b/src/Pages/MainPage/SidebarPage/SidebarPage.css
@@ -1,7 +1,7 @@
 .sidebar {
   min-width: 30px;
   height: 100vh;
-  padding: 1rem 0;
+  padding: 1.5rem 0 0.8rem 0;
   box-sizing: border-box;
 }
 
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .sidebar-item {
