--- a/src/Pages/MainPage/SidebarPage/SidebarPage.css
+++ b/src/Pages/MainPage/SidebarPage/SidebarPage.css
@@ -37,15 +37,14 @@
   align-items: center;
 }
 
-.sidebar-mode-toggle,
 .sidebar-settings {
   font-size: 1.2rem;
   padding: 0.5rem 0;
   color: #555;
   transition: color 0.2s;
+  cursor: pointer;
 }
 
-.sidebar-mode-toggle:hover,
 .sidebar-settings:hover {
   color: #000;
 }
