--- a/src/Pages/OnboardingRelated/Signup/RequestSignup.css
+++ b/src/Pages/OnboardingRelated/Signup/RequestSignup.css
@@ -62,7 +62,8 @@
   margin-top: 1rem;
   font-size: 0.85rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .req-signup-footer a {
