--- a/src/Pages/MainPage/ContactsPage/ContactsPage.css
+++ b/src/Pages/MainPage/ContactsPage/ContactsPage.css
@@ -1,8 +1,9 @@
 .contact-list {
+  display: flex;
+  flex-direction: column;
   min-width: 200px;
   width: 100%;
   height: 100vh;
-  /* padding: 1rem; */
   box-sizing: border-box;
 }
 
@@ -115,6 +116,14 @@
   font-size: 14px;
   color: #555;
   margin-top: 4px;
+}
+
+.contact-message span {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+  max-width: 80%;
 }
 
 .unread-badge-message {
